sw/compiler/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    TYPEDEF
    INCLUDE

Grammar

Rule 0     S' -> strt
Rule 1     new_scope -> <empty>
Rule 2     finish_scope -> <empty>
Rule 3     identifier -> IDENTIFIER
Rule 4     constant -> INTEGER
Rule 5     constant -> DECIMALFLOAT
Rule 6     constant -> FLOATVAL
Rule 7     constant -> CHARACTER
Rule 8     constant -> ESCAPECHAR
Rule 9     constant -> STRING
Rule 10    primary_expression -> identifier
Rule 11    primary_expression -> constant
Rule 12    primary_expression -> ( expression )
Rule 13    postfix_expression -> primary_expression
Rule 14    postfix_expression -> postfix_expression [ expression ]
Rule 15    postfix_expression -> postfix_expression ( )
Rule 16    postfix_expression -> postfix_expression ( argument_expression_list )
Rule 17    postfix_expression -> postfix_expression . identifier
Rule 18    postfix_expression -> postfix_expression PTR_OP identifier
Rule 19    postfix_expression -> postfix_expression INC_OP
Rule 20    postfix_expression -> postfix_expression DEC_OP
Rule 21    argument_expression_list -> assignment_expression
Rule 22    argument_expression_list -> argument_expression_list , assignment_expression
Rule 23    unary_expression -> postfix_expression
Rule 24    unary_expression -> INC_OP unary_expression
Rule 25    unary_expression -> DEC_OP unary_expression
Rule 26    unary_expression -> unary_operator cast_expression
Rule 27    unary_expression -> SIZEOF unary_expression
Rule 28    unary_expression -> SIZEOF ( type_name )
Rule 29    unary_operator -> &
Rule 30    unary_operator -> *
Rule 31    unary_operator -> +
Rule 32    unary_operator -> -
Rule 33    unary_operator -> !
Rule 34    cast_expression -> unary_expression
Rule 35    cast_expression -> ( type_name ) cast_expression
Rule 36    multiplicative_expression -> cast_expression
Rule 37    multiplicative_expression -> multiplicative_expression * cast_expression
Rule 38    multiplicative_expression -> multiplicative_expression / cast_expression
Rule 39    multiplicative_expression -> multiplicative_expression % cast_expression
Rule 40    additive_expression -> multiplicative_expression
Rule 41    additive_expression -> additive_expression + multiplicative_expression
Rule 42    additive_expression -> additive_expression - multiplicative_expression
Rule 43    shift_expression -> additive_expression
Rule 44    shift_expression -> shift_expression LEFT_OP additive_expression
Rule 45    shift_expression -> shift_expression RIGHT_OP additive_expression
Rule 46    relational_expression -> shift_expression
Rule 47    relational_expression -> relational_expression < shift_expression
Rule 48    relational_expression -> relational_expression > shift_expression
Rule 49    relational_expression -> relational_expression LE_OP shift_expression
Rule 50    relational_expression -> relational_expression GE_OP shift_expression
Rule 51    equality_expression -> relational_expression
Rule 52    equality_expression -> equality_expression EQ_OP relational_expression
Rule 53    equality_expression -> equality_expression NE_OP relational_expression
Rule 54    and_expression -> equality_expression
Rule 55    and_expression -> and_expression & equality_expression
Rule 56    exclusive_or_expression -> and_expression
Rule 57    exclusive_or_expression -> exclusive_or_expression ^ and_expression
Rule 58    inclusive_or_expression -> exclusive_or_expression
Rule 59    inclusive_or_expression -> inclusive_or_expression | exclusive_or_expression
Rule 60    logical_and_expression -> inclusive_or_expression
Rule 61    logical_and_expression -> logical_and_expression AND_OP inclusive_or_expression
Rule 62    logical_or_expression -> logical_and_expression
Rule 63    logical_or_expression -> logical_or_expression OR_OP logical_and_expression
Rule 64    conditional_expression -> logical_or_expression
Rule 65    assignment_expression -> conditional_expression
Rule 66    assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 67    equal_to -> =
Rule 68    assignment_operator -> equal_to
Rule 69    assignment_operator -> MUL_ASSIGN
Rule 70    assignment_operator -> DIV_ASSIGN
Rule 71    assignment_operator -> MOD_ASSIGN
Rule 72    assignment_operator -> ADD_ASSIGN
Rule 73    assignment_operator -> SUB_ASSIGN
Rule 74    assignment_operator -> LEFT_ASSIGN
Rule 75    assignment_operator -> RIGHT_ASSIGN
Rule 76    expression -> assignment_expression
Rule 77    expression -> expression , assignment_expression
Rule 78    constant_expression -> conditional_expression
Rule 79    declaration -> declaration_specifiers ;
Rule 80    declaration -> declaration_specifiers error
Rule 81    declaration -> declaration_specifiers init_declarator_list ;
Rule 82    declaration -> declaration_specifiers init_declarator_list error
Rule 83    declaration_specifiers -> type_specifier
Rule 84    init_declarator_list -> init_declarator
Rule 85    init_declarator_list -> init_declarator_list , init_declarator
Rule 86    init_declarator -> declarator equal_to initializer
Rule 87    init_declarator -> declarator
Rule 88    type_specifier -> VOID
Rule 89    type_specifier -> CHAR
Rule 90    type_specifier -> INT
Rule 91    type_specifier -> FLOAT
Rule 92    type_specifier -> TYPE_NAME
Rule 93    specifier_qualifier_list -> type_specifier
Rule 94    declarator -> pointer declarator
Rule 95    declarator -> direct_declarator
Rule 96    set_parameter_flag -> <empty>
Rule 97    unset_parameter_flag -> <empty>
Rule 98    direct_declarator -> identifier
Rule 99    direct_declarator -> direct_declarator [ constant_expression ]
Rule 100   direct_declarator -> direct_declarator [ ]
Rule 101   direct_declarator -> direct_declarator ( set_parameter_flag parameter_type_list unset_parameter_flag )
Rule 102   direct_declarator -> direct_declarator ( set_parameter_flag identifier_list unset_parameter_flag )
Rule 103   direct_declarator -> direct_declarator ( )
Rule 104   pointer -> *
Rule 105   parameter_type_list -> parameter_list
Rule 106   parameter_list -> parameter_declaration
Rule 107   parameter_list -> parameter_list , parameter_declaration
Rule 108   parameter_declaration -> declaration_specifiers declarator
Rule 109   parameter_declaration -> declaration_specifiers abstract_declarator
Rule 110   parameter_declaration -> declaration_specifiers
Rule 111   identifier_list -> identifier
Rule 112   identifier_list -> identifier_list , identifier
Rule 113   type_name -> specifier_qualifier_list
Rule 114   type_name -> specifier_qualifier_list abstract_declarator
Rule 115   abstract_declarator -> pointer
Rule 116   abstract_declarator -> direct_abstract_declarator
Rule 117   abstract_declarator -> pointer direct_abstract_declarator
Rule 118   direct_abstract_declarator -> [ ]
Rule 119   direct_abstract_declarator -> [ constant_expression ]
Rule 120   initializer -> assignment_expression
Rule 121   initializer -> { initializer_list }
Rule 122   initializer -> { initializer_list , }
Rule 123   initializer_list -> initializer
Rule 124   initializer_list -> initializer_list , initializer
Rule 125   statement -> labeled_statement
Rule 126   statement -> compound_statement
Rule 127   statement -> expression_statement
Rule 128   statement -> selection_statement
Rule 129   statement -> iteration_statement
Rule 130   statement -> jump_statement
Rule 131   labeled_statement -> CASE constant_expression : statement
Rule 132   labeled_statement -> DEFAULT : statement
Rule 133   compound_statement -> { }
Rule 134   compound_statement -> { new_scope compound_statement_list finish_scope }
Rule 135   compound_statement -> { new_scope compound_declaration_list finish_scope }
Rule 136   compound_statement_list -> declaration_list
Rule 137   compound_statement_list -> declaration_list compound_declaration_list
Rule 138   compound_declaration_list -> statement_list
Rule 139   compound_declaration_list -> statement_list compound_statement_list
Rule 140   declaration_list -> declaration
Rule 141   declaration_list -> declaration_list declaration
Rule 142   statement_list -> statement
Rule 143   statement_list -> statement_list statement
Rule 144   expression_statement -> ;
Rule 145   expression_statement -> expression ;
Rule 146   expression_statement -> expression error
Rule 147   get_labels -> <empty>
Rule 148   release_labels -> <empty>
Rule 149   switch_label -> <empty>
Rule 150   release_switch_label -> <empty>
Rule 151   selection_statement -> IF ( expression ) statement
Rule 152   selection_statement -> IF ( expression ) statement ELSE statement
Rule 153   selection_statement -> SWITCH get_labels ( expression ) switch_label statement release_switch_label release_labels
Rule 154   iteration_statement -> WHILE get_labels ( expression ) statement release_labels
Rule 155   iteration_statement -> DO get_labels statement WHILE ( expression ) ; release_labels
Rule 156   iteration_statement -> FOR get_labels ( expression_statement expression_statement _embed0_iteration_statement ) statement release_labels
Rule 157   iteration_statement -> FOR get_labels ( expression_statement expression_statement expression _embed1_iteration_statement ) statement release_labels
Rule 158   _embed0_iteration_statement -> <empty>
Rule 159   _embed1_iteration_statement -> <empty>
Rule 160   jump_statement -> CONTINUE ;
Rule 161   jump_statement -> BREAK ;
Rule 162   jump_statement -> RETURN ;
Rule 163   jump_statement -> RETURN expression ;
Rule 164   strt -> strt1
Rule 165   strt -> strt strt1
Rule 166   strt1 -> external_declaration
Rule 167   strt1 -> strt1 external_declaration
Rule 168   external_declaration -> function_definition
Rule 169   external_declaration -> declaration
Rule 170   function_scope -> <empty>
Rule 171   unset_function_scope -> <empty>
Rule 172   function_definition -> declaration_specifiers declarator declaration_list function_scope get_labels compound_statement release_labels unset_function_scope
Rule 173   function_definition -> declaration_specifiers declarator function_scope get_labels compound_statement release_labels unset_function_scope
Rule 174   function_definition -> declarator declaration_list function_scope get_labels compound_statement release_labels unset_function_scope
Rule 175   function_definition -> declarator function_scope get_labels compound_statement release_labels unset_function_scope

Terminals, with rules where they appear

!                    : 33
%                    : 39
&                    : 29 55
(                    : 12 15 16 28 35 101 102 103 151 152 153 154 155 156 157
)                    : 12 15 16 28 35 101 102 103 151 152 153 154 155 156 157
*                    : 30 37 104
+                    : 31 41
,                    : 22 77 85 107 112 122 124
-                    : 32 42
.                    : 17
/                    : 38
:                    : 131 132
;                    : 79 81 144 145 155 160 161 162 163
<                    : 47
=                    : 67
>                    : 48
ADD_ASSIGN           : 72
AND_OP               : 61
BREAK                : 161
CASE                 : 131
CHAR                 : 89
CHARACTER            : 7
CONTINUE             : 160
DECIMALFLOAT         : 5
DEC_OP               : 20 25
DEFAULT              : 132
DIV_ASSIGN           : 70
DO                   : 155
ELSE                 : 152
EQ_OP                : 52
ESCAPECHAR           : 8
FLOAT                : 91
FLOATVAL             : 6
FOR                  : 156 157
GE_OP                : 50
IDENTIFIER           : 3
IF                   : 151 152
INCLUDE              : 
INC_OP               : 19 24
INT                  : 90
INTEGER              : 4
LEFT_ASSIGN          : 74
LEFT_OP              : 44
LE_OP                : 49
MOD_ASSIGN           : 71
MUL_ASSIGN           : 69
NE_OP                : 53
OR_OP                : 63
PTR_OP               : 18
RETURN               : 162 163
RIGHT_ASSIGN         : 75
RIGHT_OP             : 45
SIZEOF               : 27 28
STRING               : 9
SUB_ASSIGN           : 73
SWITCH               : 153
TYPEDEF              : 
TYPE_NAME            : 92
VOID                 : 88
WHILE                : 154 155
[                    : 14 99 100 118 119
]                    : 14 99 100 118 119
^                    : 57
error                : 80 82 146
{                    : 121 122 133 134 135
|                    : 59
}                    : 121 122 133 134 135

Nonterminals, with rules where they appear

_embed0_iteration_statement : 156
_embed1_iteration_statement : 157
abstract_declarator  : 109 114
additive_expression  : 41 42 43 44 45
and_expression       : 55 56 57
argument_expression_list : 16 22
assignment_expression : 21 22 66 76 77 120
assignment_operator  : 66
cast_expression      : 26 35 36 37 38 39
compound_declaration_list : 135 137
compound_statement   : 126 172 173 174 175
compound_statement_list : 134 139
conditional_expression : 65 78
constant             : 11
constant_expression  : 99 119 131
declaration          : 140 141 169
declaration_list     : 136 137 141 172 174
declaration_specifiers : 79 80 81 82 108 109 110 172 173
declarator           : 86 87 94 108 172 173 174 175
direct_abstract_declarator : 116 117
direct_declarator    : 95 99 100 101 102 103
equal_to             : 68 86
equality_expression  : 52 53 54 55
exclusive_or_expression : 57 58 59
expression           : 12 14 77 145 146 151 152 153 154 155 157 163
expression_statement : 127 156 156 157 157
external_declaration : 166 167
finish_scope         : 134 135
function_definition  : 168
function_scope       : 172 173 174 175
get_labels           : 153 154 155 156 157 172 173 174 175
identifier           : 10 17 18 98 111 112
identifier_list      : 102 112
inclusive_or_expression : 59 60 61
init_declarator      : 84 85
init_declarator_list : 81 82 85
initializer          : 86 123 124
initializer_list     : 121 122 124
iteration_statement  : 129
jump_statement       : 130
labeled_statement    : 125
logical_and_expression : 61 62 63
logical_or_expression : 63 64
multiplicative_expression : 37 38 39 40 41 42
new_scope            : 134 135
parameter_declaration : 106 107
parameter_list       : 105 107
parameter_type_list  : 101
pointer              : 94 115 117
postfix_expression   : 14 15 16 17 18 19 20 23
primary_expression   : 13
relational_expression : 47 48 49 50 51 52 53
release_labels       : 153 154 155 156 157 172 173 174 175
release_switch_label : 153
selection_statement  : 128
set_parameter_flag   : 101 102
shift_expression     : 44 45 46 47 48 49 50
specifier_qualifier_list : 113 114
statement            : 131 132 142 143 151 152 152 153 154 155 156 157
statement_list       : 138 139 143
strt                 : 165 0
strt1                : 164 165 167
switch_label         : 153
type_name            : 28 35
type_specifier       : 83 93
unary_expression     : 24 25 27 34 66
unary_operator       : 26
unset_function_scope : 172 173 174 175
unset_parameter_flag : 101 102

Parsing method: LALR

state 0

    (0) S' -> . strt
    (164) strt -> . strt1
    (165) strt -> . strt strt1
    (166) strt1 -> . external_declaration
    (167) strt1 -> . strt1 external_declaration
    (168) external_declaration -> . function_definition
    (169) external_declaration -> . declaration
    (172) function_definition -> . declaration_specifiers declarator declaration_list function_scope get_labels compound_statement release_labels unset_function_scope
    (173) function_definition -> . declaration_specifiers declarator function_scope get_labels compound_statement release_labels unset_function_scope
    (174) function_definition -> . declarator declaration_list function_scope get_labels compound_statement release_labels unset_function_scope
    (175) function_definition -> . declarator function_scope get_labels compound_statement release_labels unset_function_scope
    (79) declaration -> . declaration_specifiers ;
    (80) declaration -> . declaration_specifiers error
    (81) declaration -> . declaration_specifiers init_declarator_list ;
    (82) declaration -> . declaration_specifiers init_declarator_list error
    (83) declaration_specifiers -> . type_specifier
    (94) declarator -> . pointer declarator
    (95) declarator -> . direct_declarator
    (88) type_specifier -> . VOID
    (89) type_specifier -> . CHAR
    (90) type_specifier -> . INT
    (91) type_specifier -> . FLOAT
    (92) type_specifier -> . TYPE_NAME
    (104) pointer -> . *
    (98) direct_declarator -> . identifier
    (99) direct_declarator -> . direct_declarator [ constant_expression ]
    (100) direct_declarator -> . direct_declarator [ ]
    (101) direct_declarator -> . direct_declarator ( set_parameter_flag parameter_type_list unset_parameter_flag )
    (102) direct_declarator -> . direct_declarator ( set_parameter_flag identifier_list unset_parameter_flag )
    (103) direct_declarator -> . direct_declarator ( )
    (3) identifier -> . IDENTIFIER

    VOID            shift and go to state 2
    CHAR            shift and go to state 4
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    TYPE_NAME       shift and go to state 1
    *               shift and go to state 8
    IDENTIFIER      shift and go to state 10

    declaration                    shift and go to state 3
    pointer                        shift and go to state 5
    external_declaration           shift and go to state 6
    type_specifier                 shift and go to state 7
    strt1                          shift and go to state 9
    direct_declarator              shift and go to state 11
    declaration_specifiers         shift and go to state 12
    function_definition            shift and go to state 13
    strt                           shift and go to state 16
    declarator                     shift and go to state 17
    identifier                     shift and go to state 18

state 1

    (92) type_specifier -> TYPE_NAME .

    ;               reduce using rule 92 (type_specifier -> TYPE_NAME .)
    error           reduce using rule 92 (type_specifier -> TYPE_NAME .)
    *               reduce using rule 92 (type_specifier -> TYPE_NAME .)
    IDENTIFIER      reduce using rule 92 (type_specifier -> TYPE_NAME .)
    [               reduce using rule 92 (type_specifier -> TYPE_NAME .)
    ,               reduce using rule 92 (type_specifier -> TYPE_NAME .)
    )               reduce using rule 92 (type_specifier -> TYPE_NAME .)


state 2

    (88) type_specifier -> VOID .

    ;               reduce using rule 88 (type_specifier -> VOID .)
    error           reduce using rule 88 (type_specifier -> VOID .)
    *               reduce using rule 88 (type_specifier -> VOID .)
    IDENTIFIER      reduce using rule 88 (type_specifier -> VOID .)
    [               reduce using rule 88 (type_specifier -> VOID .)
    ,               reduce using rule 88 (type_specifier -> VOID .)
    )               reduce using rule 88 (type_specifier -> VOID .)


state 3

    (169) external_declaration -> declaration .

    VOID            reduce using rule 169 (external_declaration -> declaration .)
    CHAR            reduce using rule 169 (external_declaration -> declaration .)
    INT             reduce using rule 169 (external_declaration -> declaration .)
    FLOAT           reduce using rule 169 (external_declaration -> declaration .)
    TYPE_NAME       reduce using rule 169 (external_declaration -> declaration .)
    *               reduce using rule 169 (external_declaration -> declaration .)
    IDENTIFIER      reduce using rule 169 (external_declaration -> declaration .)
    $end            reduce using rule 169 (external_declaration -> declaration .)


state 4

    (89) type_specifier -> CHAR .

    ;               reduce using rule 89 (type_specifier -> CHAR .)
    error           reduce using rule 89 (type_specifier -> CHAR .)
    *               reduce using rule 89 (type_specifier -> CHAR .)
    IDENTIFIER      reduce using rule 89 (type_specifier -> CHAR .)
    [               reduce using rule 89 (type_specifier -> CHAR .)
    ,               reduce using rule 89 (type_specifier -> CHAR .)
    )               reduce using rule 89 (type_specifier -> CHAR .)


state 5

    (94) declarator -> pointer . declarator
    (94) declarator -> . pointer declarator
    (95) declarator -> . direct_declarator
    (104) pointer -> . *
    (98) direct_declarator -> . identifier
    (99) direct_declarator -> . direct_declarator [ constant_expression ]
    (100) direct_declarator -> . direct_declarator [ ]
    (101) direct_declarator -> . direct_declarator ( set_parameter_flag parameter_type_list unset_parameter_flag )
    (102) direct_declarator -> . direct_declarator ( set_parameter_flag identifier_list unset_parameter_flag )
    (103) direct_declarator -> . direct_declarator ( )
    (3) identifier -> . IDENTIFIER

    *               shift and go to state 8
    IDENTIFIER      shift and go to state 10

    direct_declarator              shift and go to state 11
    declarator                     shift and go to state 19
    identifier                     shift and go to state 18
    pointer                        shift and go to state 5

state 6

    (166) strt1 -> external_declaration .

    VOID            reduce using rule 166 (strt1 -> external_declaration .)
    CHAR            reduce using rule 166 (strt1 -> external_declaration .)
    INT             reduce using rule 166 (strt1 -> external_declaration .)
    FLOAT           reduce using rule 166 (strt1 -> external_declaration .)
    TYPE_NAME       reduce using rule 166 (strt1 -> external_declaration .)
    *               reduce using rule 166 (strt1 -> external_declaration .)
    IDENTIFIER      reduce using rule 166 (strt1 -> external_declaration .)
    $end            reduce using rule 166 (strt1 -> external_declaration .)


state 7

    (83) declaration_specifiers -> type_specifier .

    ;               reduce using rule 83 (declaration_specifiers -> type_specifier .)
    error           reduce using rule 83 (declaration_specifiers -> type_specifier .)
    *               reduce using rule 83 (declaration_specifiers -> type_specifier .)
    IDENTIFIER      reduce using rule 83 (declaration_specifiers -> type_specifier .)
    [               reduce using rule 83 (declaration_specifiers -> type_specifier .)
    ,               reduce using rule 83 (declaration_specifiers -> type_specifier .)
    )               reduce using rule 83 (declaration_specifiers -> type_specifier .)


state 8

    (104) pointer -> * .

    *               reduce using rule 104 (pointer -> * .)
    IDENTIFIER      reduce using rule 104 (pointer -> * .)
    [               reduce using rule 104 (pointer -> * .)
    )               reduce using rule 104 (pointer -> * .)
    ,               reduce using rule 104 (pointer -> * .)


state 9

    (164) strt -> strt1 .
    (167) strt1 -> strt1 . external_declaration
    (168) external_declaration -> . function_definition
    (169) external_declaration -> . declaration
    (172) function_definition -> . declaration_specifiers declarator declaration_list function_scope get_labels compound_statement release_labels unset_function_scope
    (173) function_definition -> . declaration_specifiers declarator function_scope get_labels compound_statement release_labels unset_function_scope
    (174) function_definition -> . declarator declaration_list function_scope get_labels compound_statement release_labels unset_function_scope
    (175) function_definition -> . declarator function_scope get_labels compound_statement release_labels unset_function_scope
    (79) declaration -> . declaration_specifiers ;
    (80) declaration -> . declaration_specifiers error
    (81) declaration -> . declaration_specifiers init_declarator_list ;
    (82) declaration -> . declaration_specifiers init_declarator_list error
    (83) declaration_specifiers -> . type_specifier
    (94) declarator -> . pointer declarator
    (95) declarator -> . direct_declarator
    (88) type_specifier -> . VOID
    (89) type_specifier -> . CHAR
    (90) type_specifier -> . INT
    (91) type_specifier -> . FLOAT
    (92) type_specifier -> . TYPE_NAME
    (104) pointer -> . *
    (98) direct_declarator -> . identifier
    (99) direct_declarator -> . direct_declarator [ constant_expression ]
    (100) direct_declarator -> . direct_declarator [ ]
    (101) direct_declarator -> . direct_declarator ( set_parameter_flag parameter_type_list unset_parameter_flag )
    (102) direct_declarator -> . direct_declarator ( set_parameter_flag identifier_list unset_parameter_flag )
    (103) direct_declarator -> . direct_declarator ( )
    (3) identifier -> . IDENTIFIER

  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for TYPE_NAME resolved as shift
  ! shift/reduce conflict for * resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
    $end            reduce using rule 164 (strt -> strt1 .)
    VOID            shift and go to state 2
    CHAR            shift and go to state 4
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    TYPE_NAME       shift and go to state 1
    *               shift and go to state 8
    IDENTIFIER      shift and go to state 10

  ! VOID            [ reduce using rule 164 (strt -> strt1 .) ]
  ! CHAR            [ reduce using rule 164 (strt -> strt1 .) ]
  ! INT             [ reduce using rule 164 (strt -> strt1 .) ]
  ! FLOAT           [ reduce using rule 164 (strt -> strt1 .) ]
  ! TYPE_NAME       [ reduce using rule 164 (strt -> strt1 .) ]
  ! *               [ reduce using rule 164 (strt -> strt1 .) ]
  ! IDENTIFIER      [ reduce using rule 164 (strt -> strt1 .) ]

    pointer                        shift and go to state 5
    external_declaration           shift and go to state 20
    type_specifier                 shift and go to state 7
    direct_declarator              shift and go to state 11
    declaration_specifiers         shift and go to state 12
    declaration                    shift and go to state 3
    function_definition            shift and go to state 13
    declarator                     shift and go to state 17
    identifier                     shift and go to state 18

state 10

    (3) identifier -> IDENTIFIER .

    [               reduce using rule 3 (identifier -> IDENTIFIER .)
    (               reduce using rule 3 (identifier -> IDENTIFIER .)
    VOID            reduce using rule 3 (identifier -> IDENTIFIER .)
    CHAR            reduce using rule 3 (identifier -> IDENTIFIER .)
    INT             reduce using rule 3 (identifier -> IDENTIFIER .)
    FLOAT           reduce using rule 3 (identifier -> IDENTIFIER .)
    TYPE_NAME       reduce using rule 3 (identifier -> IDENTIFIER .)
    {               reduce using rule 3 (identifier -> IDENTIFIER .)
    =               reduce using rule 3 (identifier -> IDENTIFIER .)
    ;               reduce using rule 3 (identifier -> IDENTIFIER .)
    error           reduce using rule 3 (identifier -> IDENTIFIER .)
    ,               reduce using rule 3 (identifier -> IDENTIFIER .)
    )               reduce using rule 3 (identifier -> IDENTIFIER .)
    .               reduce using rule 3 (identifier -> IDENTIFIER .)
    PTR_OP          reduce using rule 3 (identifier -> IDENTIFIER .)
    INC_OP          reduce using rule 3 (identifier -> IDENTIFIER .)
    DEC_OP          reduce using rule 3 (identifier -> IDENTIFIER .)
    *               reduce using rule 3 (identifier -> IDENTIFIER .)
    /               reduce using rule 3 (identifier -> IDENTIFIER .)
    %               reduce using rule 3 (identifier -> IDENTIFIER .)
    +               reduce using rule 3 (identifier -> IDENTIFIER .)
    -               reduce using rule 3 (identifier -> IDENTIFIER .)
    LEFT_OP         reduce using rule 3 (identifier -> IDENTIFIER .)
    RIGHT_OP        reduce using rule 3 (identifier -> IDENTIFIER .)
    <               reduce using rule 3 (identifier -> IDENTIFIER .)
    >               reduce using rule 3 (identifier -> IDENTIFIER .)
    LE_OP           reduce using rule 3 (identifier -> IDENTIFIER .)
    GE_OP           reduce using rule 3 (identifier -> IDENTIFIER .)
    EQ_OP           reduce using rule 3 (identifier -> IDENTIFIER .)
    NE_OP           reduce using rule 3 (identifier -> IDENTIFIER .)
    &               reduce using rule 3 (identifier -> IDENTIFIER .)
    ^               reduce using rule 3 (identifier -> IDENTIFIER .)
    |               reduce using rule 3 (identifier -> IDENTIFIER .)
    AND_OP          reduce using rule 3 (identifier -> IDENTIFIER .)
    OR_OP           reduce using rule 3 (identifier -> IDENTIFIER .)
    ]               reduce using rule 3 (identifier -> IDENTIFIER .)
    MUL_ASSIGN      reduce using rule 3 (identifier -> IDENTIFIER .)
    DIV_ASSIGN      reduce using rule 3 (identifier -> IDENTIFIER .)
    MOD_ASSIGN      reduce using rule 3 (identifier -> IDENTIFIER .)
    ADD_ASSIGN      reduce using rule 3 (identifier -> IDENTIFIER .)
    SUB_ASSIGN      reduce using rule 3 (identifier -> IDENTIFIER .)
    LEFT_ASSIGN     reduce using rule 3 (identifier -> IDENTIFIER .)
    RIGHT_ASSIGN    reduce using rule 3 (identifier -> IDENTIFIER .)
    }               reduce using rule 3 (identifier -> IDENTIFIER .)
    :               reduce using rule 3 (identifier -> IDENTIFIER .)


state 11

    (95) declarator -> direct_declarator .
    (99) direct_declarator -> direct_declarator . [ constant_expression ]
    (100) direct_declarator -> direct_declarator . [ ]
    (101) direct_declarator -> direct_declarator . ( set_parameter_flag parameter_type_list unset_parameter_flag )
    (102) direct_declarator -> direct_declarator . ( set_parameter_flag identifier_list unset_parameter_flag )
    (103) direct_declarator -> direct_declarator . ( )

    VOID            reduce using rule 95 (declarator -> direct_declarator .)
    CHAR            reduce using rule 95 (declarator -> direct_declarator .)
    INT             reduce using rule 95 (declarator -> direct_declarator .)
    FLOAT           reduce using rule 95 (declarator -> direct_declarator .)
    TYPE_NAME       reduce using rule 95 (declarator -> direct_declarator .)
    {               reduce using rule 95 (declarator -> direct_declarator .)
    =               reduce using rule 95 (declarator -> direct_declarator .)
    ;               reduce using rule 95 (declarator -> direct_declarator .)
    error           reduce using rule 95 (declarator -> direct_declarator .)
    ,               reduce using rule 95 (declarator -> direct_declarator .)
    )               reduce using rule 95 (declarator -> direct_declarator .)
    [               shift and go to state 22
    (               shift and go to state 21


state 12

    (172) function_definition -> declaration_specifiers . declarator declaration_list function_scope get_labels compound_statement release_labels unset_function_scope
    (173) function_definition -> declaration_specifiers . declarator function_scope get_labels compound_statement release_labels unset_function_scope
    (79) declaration -> declaration_specifiers . ;
    (80) declaration -> declaration_specifiers . error
    (81) declaration -> declaration_specifiers . init_declarator_list ;
    (82) declaration -> declaration_specifiers . init_declarator_list error
    (94) declarator -> . pointer declarator
    (95) declarator -> . direct_declarator
    (84) init_declarator_list -> . init_declarator
    (85) init_declarator_list -> . init_declarator_list , init_declarator
    (104) pointer -> . *
    (98) direct_declarator -> . identifier
    (99) direct_declarator -> . direct_declarator [ constant_expression ]
    (100) direct_declarator -> . direct_declarator [ ]
    (101) direct_declarator -> . direct_declarator ( set_parameter_flag parameter_type_list unset_parameter_flag )
    (102) direct_declarator -> . direct_declarator ( set_parameter_flag identifier_list unset_parameter_flag )
    (103) direct_declarator -> . direct_declarator ( )
    (86) init_declarator -> . declarator equal_to initializer
    (87) init_declarator -> . declarator
    (3) identifier -> . IDENTIFIER

    ;               shift and go to state 24
    error           shift and go to state 27
    *               shift and go to state 8
    IDENTIFIER      shift and go to state 10

    identifier                     shift and go to state 18
    direct_declarator              shift and go to state 11
    init_declarator                shift and go to state 25
    declarator                     shift and go to state 26
    init_declarator_list           shift and go to state 23
    pointer                        shift and go to state 5

state 13

    (168) external_declaration -> function_definition .

    VOID            reduce using rule 168 (external_declaration -> function_definition .)
    CHAR            reduce using rule 168 (external_declaration -> function_definition .)
    INT             reduce using rule 168 (external_declaration -> function_definition .)
    FLOAT           reduce using rule 168 (external_declaration -> function_definition .)
    TYPE_NAME       reduce using rule 168 (external_declaration -> function_definition .)
    *               reduce using rule 168 (external_declaration -> function_definition .)
    IDENTIFIER      reduce using rule 168 (external_declaration -> function_definition .)
    $end            reduce using rule 168 (external_declaration -> function_definition .)


state 14

    (90) type_specifier -> INT .

    ;               reduce using rule 90 (type_specifier -> INT .)
    error           reduce using rule 90 (type_specifier -> INT .)
    *               reduce using rule 90 (type_specifier -> INT .)
    IDENTIFIER      reduce using rule 90 (type_specifier -> INT .)
    [               reduce using rule 90 (type_specifier -> INT .)
    ,               reduce using rule 90 (type_specifier -> INT .)
    )               reduce using rule 90 (type_specifier -> INT .)


state 15

    (91) type_specifier -> FLOAT .

    ;               reduce using rule 91 (type_specifier -> FLOAT .)
    error           reduce using rule 91 (type_specifier -> FLOAT .)
    *               reduce using rule 91 (type_specifier -> FLOAT .)
    IDENTIFIER      reduce using rule 91 (type_specifier -> FLOAT .)
    [               reduce using rule 91 (type_specifier -> FLOAT .)
    ,               reduce using rule 91 (type_specifier -> FLOAT .)
    )               reduce using rule 91 (type_specifier -> FLOAT .)


state 16

    (0) S' -> strt .
    (165) strt -> strt . strt1
    (166) strt1 -> . external_declaration
    (167) strt1 -> . strt1 external_declaration
    (168) external_declaration -> . function_definition
    (169) external_declaration -> . declaration
    (172) function_definition -> . declaration_specifiers declarator declaration_list function_scope get_labels compound_statement release_labels unset_function_scope
    (173) function_definition -> . declaration_specifiers declarator function_scope get_labels compound_statement release_labels unset_function_scope
    (174) function_definition -> . declarator declaration_list function_scope get_labels compound_statement release_labels unset_function_scope
    (175) function_definition -> . declarator function_scope get_labels compound_statement release_labels unset_function_scope
    (79) declaration -> . declaration_specifiers ;
    (80) declaration -> . declaration_specifiers error
    (81) declaration -> . declaration_specifiers init_declarator_list ;
    (82) declaration -> . declaration_specifiers init_declarator_list error
    (83) declaration_specifiers -> . type_specifier
    (94) declarator -> . pointer declarator
    (95) declarator -> . direct_declarator
    (88) type_specifier -> . VOID
    (89) type_specifier -> . CHAR
    (90) type_specifier -> . INT
    (91) type_specifier -> . FLOAT
    (92) type_specifier -> . TYPE_NAME
    (104) pointer -> . *
    (98) direct_declarator -> . identifier
    (99) direct_declarator -> . direct_declarator [ constant_expression ]
    (100) direct_declarator -> . direct_declarator [ ]
    (101) direct_declarator -> . direct_declarator ( set_parameter_flag parameter_type_list unset_parameter_flag )
    (102) direct_declarator -> . direct_declarator ( set_parameter_flag identifier_list unset_parameter_flag )
    (103) direct_declarator -> . direct_declarator ( )
    (3) identifier -> . IDENTIFIER

    VOID            shift and go to state 2
    CHAR            shift and go to state 4
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    TYPE_NAME       shift and go to state 1
    *               shift and go to state 8
    IDENTIFIER      shift and go to state 10
